new minimalistic navbar

--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
 </head>
 <body>
   <header>
-    <h1>359 Records</h1>
+    <nav>
+        <h1><a href="index.html" class="logo">359 Records</a></h1>
+        <div class="nav-item"><a href="jslime.html">J Slime</a></div>
+        <div class="nav-item"><a href="chaos&funkel.html">Chaos&Funkel</a></div>
+    </nav>
   </header>
-  
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="jslime.html">J Slime</a></li>
-      <li><a href="chaos&funkel.html">Chaos&Funkel</a></li>
-    </ul>
-  </nav>
-
   <div class="release">
     <h2>Lit</h2>
     <div class="row_content">
@@ -49,13 +44,11 @@
     </a>
     </div>
   </div>
-  
   <div class="release">
     <h2>ÖFFNET DIE TORE</h2>
     <div class="row_content">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/uKxlsEPYcmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div> 
-    
   </div>
 </body>
 </html>
