--- a/jslime.html
+++ b/jslime.html
@@ -9,17 +9,12 @@
 </head>
 <body>
   <header>
-    <h1>359 Records</h1>
+    <nav>
+        <h1><a href="index.html" class="logo">359 Records</a></h1>
+        <div class="nav-item"><a href="jslime.html">J Slime</a></div>
+        <div class="nav-item"><a href="chaos&funkel.html">Chaos&Funkel</a></div>
+    </nav>
   </header>
-  
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="jslime.html">J Slime</a></li>
-      <li><a href="chaos&funkel.html">Chaos&Funkel</a></li>
-    </ul>
-  </nav>
-
   <div class="release">
     <h2>Lit</h2>
     <div class="row_content">
@@ -49,6 +44,5 @@
     </a>
     </div>
   </div>
-  
 </body>
 </html>
