added responsive features

--- a/chaos&funkel.html
+++ b/chaos&funkel.html
@@ -8,6 +8,7 @@
   <title>CHAOS&FUNKEL</title>
 </head>
 <body>
+  <div class="content">
   <header>
     <nav>
         <h1><a href="index.html" class="logo">359 Records</a></h1>
@@ -20,5 +21,6 @@
     <div class="row_content">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/uKxlsEPYcmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+  </div>
 </body>
 </html>
