--- a/jslime.html
+++ b/jslime.html
@@ -8,6 +8,7 @@
   <title>J Slime</title>
 </head>
 <body>
+  <div class="content">
   <header>
     <nav>
         <h1><a href="index.html" class="logo">359 Records</a></h1>
@@ -44,5 +45,6 @@
     </a>
     </div>
   </div>
+</div>
 </body>
 </html>
