--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="359 Records | The Open Source Web3 Record Label">
   <link rel="stylesheet" href="styles.css">
   <title>359 Records | The Open Source Web3 Record Label</title>
 </head>
