--- a/index.html
+++ b/index.html
@@ -17,41 +17,46 @@
           <div class="nav-item"><a href="chaos&funkel.html">Chaos&Funkel</a></div>
       </nav>
     </header>
-    <div class="release">
-      <h2>Lit</h2>
-      <div class="row_content">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/x91KB4RolL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
-      <h3>Stream Here</h3>
-      <a href="https://open.spotify.com/album/1MGZklU2a8NoUvh8WsIWMs?referral=labelaffiliate&utm_source=1100liJccTJV&utm_medium=Indie_Distrokid&utm_campaign=labelaffiliate"]>
-        <img src="img/spotify_logo.png" alt="spotify_logo">
-      </a>
-      <a href="https://music.apple.com/us/album/lit-single/1598792626?uo=4"]>
-        <img src="img/applemusic_logo.png" alt="apple_logo">
-      </a>
-      <a href="https://www.deezer.com/de/album/277835002">
-        <img src="img/deezer_logo.png" alt="deezer_logo">
-      </a>
-      <a href="https://www.amazon.com/gp/product/B09N2P4R2Y">
-        <img src="img/amazonmusic_logo.png" alt="amazonmusic_logo">  
-      </a>
-      <a href="https://music.apple.com/us/album/lit-single/1598792626?uo=4&app=itunes&at=1001lry3&ct=dashboard">
-        <img src="img/itunes_logo.png" alt="itunes_logo">
-      </a>
-      <a href="https://www.shazam.com/de/track/596119555/lit">
-        <img src="img/shazam_logo.png" alt="shazam_logo">
-      </a>
-      <a href="https://music.youtube.com/playlist?list=OLAK5uy_l1vqA_8gUKTZh3XFg6WRbxYBHTE07L10Q&feature=share">
-        <img src="img/youtubemusic_logo.png" alt="youtubemusic_logo">
-      </a>
-      </div>
-    </div>
-    <div class="release">
-      <h2>ÖFFNET DIE TORE</h2>
-      <div class="row_content">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/uKxlsEPYcmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div> 
-    </div>
+    <main>
+      <article class="release">
+        <h2>Lit</h2>
+        <div class="row_content">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/x91KB4RolL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          </iframe>
+        <h3>Stream Here</h3>
+        <a href="https://open.spotify.com/album/1MGZklU2a8NoUvh8WsIWMs?referral=labelaffiliate&utm_source=1100liJccTJV&utm_medium=Indie_Distrokid&utm_campaign=labelaffiliate"]>
+          <img src="img/spotify_logo.png" alt="spotify_logo">
+        </a>
+        <a href="https://music.apple.com/us/album/lit-single/1598792626?uo=4"]>
+          <img src="img/applemusic_logo.png" alt="apple_logo">
+        </a>
+        <a href="https://www.deezer.com/de/album/277835002">
+          <img src="img/deezer_logo.png" alt="deezer_logo">
+        </a>
+        <a href="https://www.amazon.com/gp/product/B09N2P4R2Y">
+          <img src="img/amazonmusic_logo.png" alt="amazonmusic_logo">  
+        </a>
+        <a href="https://music.apple.com/us/album/lit-single/1598792626?uo=4&app=itunes&at=1001lry3&ct=dashboard">
+          <img src="img/itunes_logo.png" alt="itunes_logo">
+        </a>
+        <a href="https://www.shazam.com/de/track/596119555/lit">
+          <img src="img/shazam_logo.png" alt="shazam_logo">
+        </a>
+        <a href="https://music.youtube.com/playlist?list=OLAK5uy_l1vqA_8gUKTZh3XFg6WRbxYBHTE07L10Q&feature=share">
+          <img src="img/youtubemusic_logo.png" alt="youtubemusic_logo">
+        </a>
+        </div>
+      </article>
+      <article class="release">
+        <h2>ÖFFNET DIE TORE</h2>
+        <div class="row_content">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/uKxlsEPYcmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div> 
+      </article>
+    </main> 
   </div>
+  <footer>
+    &copy; 2022 by 359 Records
+  </footer>
 </body>
 </html>
