added footer to the other pages, but it is not displayed

--- a/chaos&funkel.html
+++ b/chaos&funkel.html
@@ -9,18 +9,24 @@
 </head>
 <body>
   <div class="content">
-  <header>
-    <nav>
-        <h1><a href="index.html" class="logo">359 Records</a></h1>
-        <div class="nav-item"><a href="jslime.html">J Slime</a></div>
-        <div class="nav-item"><a href="chaos&funkel.html">Chaos&Funkel</a></div>
-    </nav>
-  </header>
-  <div class="release">
-    <h2>ÖFFNET DIE TORE/ZEHN JAHRE RAUSCH</h2>
-    <div class="row_content">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/uKxlsEPYcmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+    <header>
+      <nav>
+          <h1><a href="index.html" class="logo">359 Records</a></h1>
+          <div class="nav-item"><a href="jslime.html">J Slime</a></div>
+          <div class="nav-item"><a href="chaos&funkel.html">Chaos&Funkel</a></div>
+      </nav>
+    </header>
+    <main>
+      <article class="release">
+        <h2>ÖFFNET DIE TORE/ZEHN JAHRE RAUSCH</h2>
+        <div class="row_content">
+          <iframe src="https://www.youtube.com/embed/uKxlsEPYcmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </article>
+    </main>
   </div>
+  <footer>
+    &copy; 2022 by 359 Records
+  </footer>
 </body>
 </html>
