--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <article class="release">
         <h2>Lit</h2>
         <div class="row_content">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/x91KB4RolL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          <iframe src="https://www.youtube.com/embed/x91KB4RolL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
           </iframe>
         <h3>Stream Here</h3>
         <a href="https://open.spotify.com/album/1MGZklU2a8NoUvh8WsIWMs?referral=labelaffiliate&utm_source=1100liJccTJV&utm_medium=Indie_Distrokid&utm_campaign=labelaffiliate"]>
@@ -50,7 +50,7 @@
       <article class="release">
         <h2>ÖFFNET DIE TORE</h2>
         <div class="row_content">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/uKxlsEPYcmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/uKxlsEPYcmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div> 
       </article>
     </main> 
