added Nostr Chat Widget

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="359 Records | The Open Source Web3 Record Label">
-  <link rel="stylesheet" href="styles.css">
   <title>359 Records | The Open Source Web3 Record Label</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="content">
@@ -55,6 +55,13 @@
       </article>
     </main> 
   </div>
+  <script
+	src="https://nostri.chat/public/bundle.js"
+	data-website-owner-pubkey="npub1u7y939lg4h6q4ze67vr0426rrhuq2rktrqh6rxxvfvv3zh2kq9pqkaa0l5"
+	data-chat-type="DM" 
+	data-relays="wss://relay.f7z.io,wss://nos.lol,wss://relay.nostr.info,wss://nostr-pub.wellorder.net,wss://relay.current.fyi,wss://relay.nostr.band"
+  ></script>
+  <link rel="stylesheet" href="https://nostri.chat/public/bundle.css">
   <footer>
     &copy; 2022 by 359 Records
   </footer>
